<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="GVL" Id="{4fed740d-868b-443d-a2d4-9c2a286c4a2c}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	IN_motor1 AT %I* :BOOL;
	IN_motor2 AT %I* :BOOL;
	IN_motor3 AT %I* :BOOL;
	Sensor4 AT %I* :BOOL; // wordt niet gebruikt
	RobotIn AT %I* :BOOL;
	Startknop AT %I* :BOOL;
		
	Motor1 AT %Q* :BOOL;
	Motor2 AT %Q* :BOOL;
	Motor3 AT %Q* :BOOL;
	RobotUit AT %Q* :BOOL;
	
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>